Revert "[Change] Bump to v1.9.0"
This reverts commit 3db277e5b49cad2425e4dbde7c7aa90195f37577.